tests/paczka1/fuzzy1/51476372.err
Error in line 3: 1LDSS S738 21,4
Error in line 2: F5zS9qn A815 49,0
Error in line 7: 1LDSS A926 44,3
Error in line 1: 88ukBcs1wd A926 57,2
Error in line 18: K2VRnR9lmiJ A815 33,1
Error in line 36: A926 A926 41,56
Error in line 40: K2VRnR9lmiJ A45 64,2
